--- a/starter-template/package.json
+++ b/starter-template/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.3.21",
     "next": "^14.2.13",
     "next-intl": "^3.21.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0"
