--- a/starter-template/package.json
+++ b/starter-template/package.json
@@ -10,12 +10,15 @@
 	},
 	"dependencies": {
 		"@svgr/webpack": "^8.1.0",
+		"emailjs-com": "^3.2.0",
 		"framer-motion": "^11.3.21",
+		"lucide-react": "^0.475.0",
 		"next": "^14.2.13",
 		"next-intl": "^3.21.1",
 		"next-themes": "^0.3.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-toastify": "^11.0.3",
 		"tailwind-merge": "^2.4.0"
 	},
 	"devDependencies": {
